add OTA firmware upgrade

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,16 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-lib_deps = knolleary/PubSubClient@^2.8
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+upload_port = 192.168.0.123
+upload_protocol = espota
+upload_flags = 
+	--port=8266
+
+[env:simulator]
+platform = espressif32
+framework = arduino
+board = esp32dev
+lib_deps = 
+	knolleary/PubSubClient@^2.8
