--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ upload_port = 192.168.0.123
 upload_protocol = espota
 upload_flags = 
 	--port=8266
+extra_scripts = pre:load_config_ini.py	; Get WIFI credentials from wifi_credentials.ini
 
 [env:simulator]
 platform = espressif32
@@ -25,3 +26,4 @@ framework = arduino
 board = esp32dev
 lib_deps = 
 	knolleary/PubSubClient@^2.8
+extra_scripts = pre:load_config_ini.py
